[package]
name = "tester"
description = "A CLI to run exercism project's tests."
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
rayon = "1.8.1"
walkdir = "2.4.0"
